unpackaged/main/default/objects/FSL_Optimization_Settings__c/FSL_Optimization_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>FSL Optimization Settings</label>
</CustomObject>