unpackaged/main/default/objects/FSL_Optimization_Settings__c/fields/Create_ResourceAbsence_In_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Create_ResourceAbsence_In_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create ResourceAbsnece Records through Trigger instead of Flow.</description>
    <inlineHelpText>Create ResourceAbsnece Records through Trigger/Flow.
True: When Run_LKL__c is enabled, it will create the ResourceAbsence Records in the LKL Trigger.
False: The LKL Trigger will not create the ResourceAbsence Records.</inlineHelpText>
    <label>Create ResourceAbsence In Trigger</label>
    <type>Checkbox</type>
</CustomField>