unpackaged/main/default/objects/FSL_Optimization_Settings__c/fields/Glympse_Login_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Glympse_Login_Threshold__c</fullName>
    <inlineHelpText>Value is set in Hours format(HH). If the user has not logged into Glympse for last threshold hours then user would be prompted if not already prompted for the current day</inlineHelpText>
    <label>Glympse Login Threshold</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>