unpackaged/main/default/objects/FSL_Optimization_Settings__c/fields/Optimize_Absence_Overlaps__c.field-meta.xml
<CustomField>
    <fullName>Optimize_Absence_Overlaps__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle to run RSO when a Resource Absence creates an overlap</description>
    <inlineHelpText>Toggle to run RSO when a Resource Absence creates an overlap</inlineHelpText>
    <label>Optimize Absence Overlaps</label>
    <type>Checkbox</type>
</CustomField>