unpackaged/main/default/objects/FSL_Optimization_Settings__c/fields/Optimize_Emergency_Overlaps__c.field-meta.xml
<CustomField>
    <fullName>Optimize_Emergency_Overlaps__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle to run RSO when an Appointment is scheduled with an overlap</description>
    <inlineHelpText>Toggle to run RSO when an Appointment is scheduled with an overlap</inlineHelpText>
    <label>Optimize Emergency Overlaps</label>
    <type>Checkbox</type>
</CustomField>