unpackaged/main/default/objects/FSL_Optimization_Settings__c/fields/RSO_Candidate_SA_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>RSO_Candidate_SA_Field_API_Name__c</fullName>
    <description>Boolean Service Appointment Field for considering appointments to schedule during RSO</description>
    <inlineHelpText>Boolean Service Appointment Field for considering appointments to schedule during RSO</inlineHelpText>
    <label>RSO Candidate SA Field API Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>