unpackaged/main/default/objects/FSL_Optimization_Settings__c/fields/RSO_Max_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>RSO_Max_Run_Time__c</fullName>
    <description>Max amount of time (in seconds) RSO will process (after In Progress status)</description>
    <inlineHelpText>Max amount of time (in seconds) RSO will process (after In Progress status)</inlineHelpText>
    <label>RSO Max Run Time</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>