unpackaged/main/default/objects/FSL_Optimization_Settings__c/fields/RSO_Remain_Scheduled_SA_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>RSO_Remain_Scheduled_SA_Field_API_Name__c</fullName>
    <description>Boolean Service Appointment Field for forcing appointments to remain scheduled during RSO</description>
    <inlineHelpText>Boolean Service Appointment Field for forcing appointments to remain scheduled during RSO</inlineHelpText>
    <label>RSO Remain Scheduled SA Field API Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>