unpackaged/main/default/objects/FSL_Optimization_Settings__c/fields/RSO_Scheduling_Policy__c.field-meta.xml
<CustomField>
    <fullName>RSO_Scheduling_Policy__c</fullName>
    <description>The scheduling process that should be used when running RSO</description>
    <inlineHelpText>The scheduling process that should be used when running RSO</inlineHelpText>
    <label>RSO Scheduling Policy</label>
    <length>32</length>
    <type>Text</type>
</CustomField>