unpackaged/main/default/objects/FSL_Optimization_Settings__c/fields/RSO_Threshold__c.field-meta.xml
<CustomField>
    <fullName>RSO_Threshold__c</fullName>
    <description>Time in Minutes that delta time should consider to Run InDay</description>
    <inlineHelpText>Time in Minutes that delta time should consider to Run InDay</inlineHelpText>
    <label>RSO Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>