unpackaged/main/default/objects/FSL_Optimization_Settings__c/fields/Run_InDay_on_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Run_InDay_on_Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>On/Off to run InDay upon cancellation of Call</description>
    <inlineHelpText>On/Off to run InDay upon cancellation of Call</inlineHelpText>
    <label>Run InDay on Cancellation</label>
    <type>Checkbox</type>
</CustomField>