unpackaged/main/default/objects/FSL_Optimization_Settings__c/fields/Run_InDay_Over_Vehicle_Change__c.field-meta.xml
<CustomField>
    <fullName>Run_InDay_Over_Vehicle_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>On/Off to trigger InDay upon Vehicle change</description>
    <inlineHelpText>It is being used to trigger the InDay upon Vehicle change.</inlineHelpText>
    <label>Run InDay Over Vehicle Change</label>
    <type>Checkbox</type>
</CustomField>