unpackaged/main/default/objects/FSL_Optimization_Settings__c/fields/Run_LKL__c.field-meta.xml
<CustomField>
    <fullName>Run_LKL__c</fullName>
    <defaultValue>true</defaultValue>
    <description>On/Off field for running LKL job to create resource absence records.</description>
    <inlineHelpText>On/Off field for running LKL job to create resource absence records.
True: LKL Job will be running and creating LKL records
False: LKL Job wont run</inlineHelpText>
    <label>Run LKL</label>
    <type>Checkbox</type>
</CustomField>