unpackaged/main/default/objects/FSL_Optimization_Settings__c/fields/Run_Shifts__c.field-meta.xml
<CustomField>
    <fullName>Run_Shifts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Run LKL routines for Service Resources on Shift Schedules when the &#39;Run LKL&#39; flag is turned on.</description>
    <inlineHelpText>Run LKL routines for Service Resources on Shift Schedules when the &#39;Run LKL&#39; flag is turned on.
True: When Run_LKL__c is enabled, it will run through the LKL routines for Shift Schedules.
False: The LKL routines will skip Shift Schedules.</inlineHelpText>
    <label>Run Shifts</label>
    <type>Checkbox</type>
</CustomField>