unpackaged/main/default/objects/FSL_Optimization_Settings__c/fields/Stacked_Appointments_Count__c.field-meta.xml
<CustomField>
    <fullName>Stacked_Appointments_Count__c</fullName>
    <description>Number of stacked appointments should have to trigger RSO and In-Day</description>
    <inlineHelpText>Number of stacked appointments should have to trigger RSO and In-Day</inlineHelpText>
    <label>Stacked Appointments Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>